--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -19,10 +19,12 @@ security:
             form_login:
                 login_path: login
                 check_path: login
+            logout:       true
 
 
     access_control:
-        - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/admin, roles: ROLE_ADMIN }        
 
             # activate different ways to authenticate
