--- a/package.json
+++ b/package.json
@@ -10,7 +10,14 @@
   "version": "1.0.0",
   "description": "Test into Symfony4",
   "main": "webpack.config.js",
-  "dependencies": {},
+  "dependencies": {
+    "@fortawesome/fontawesome": "^1.1.0",
+    "@fortawesome/fontawesome-free-brands": "^5.0.2",
+    "@fortawesome/fontawesome-pro-light": "^5.0.2",
+    "@fortawesome/fontawesome-pro-regular": "^5.0.2",
+    "@fortawesome/fontawesome-pro-solid": "^5.0.2",
+    "@fortawesome/fontawesome-pro-webfonts": "^1.0.1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
