--- a/config/services.yaml
+++ b/config/services.yaml
@@ -2,7 +2,10 @@
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     locale: 'fr'
-
+    # This parameter defines the codes of the locales (languages) enabled in the application
+    app_locales: en|fr|de|es|cs|nl|ru|uk|ro|pt_BR|pl|it|ja|id|ca|sl|hr|zh_CN
+    app.notifications.email_sender: anonymous@example.com
+    
 services:
     # default configuration for services in *this* file
     _defaults:
