--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "symfony/security-csrf": "^4.0",
         "symfony/twig-bundle": "^4.0",
         "symfony/validator": "^4.0",
+        "symfony/var-dumper": "^4.0",
         "symfony/webpack-encore-pack": "^1.0",
         "symfony/yaml": "^4.0"
     },
