--- a/config/packages/easy_admin.yaml
+++ b/config/packages/easy_admin.yaml
@@ -2,9 +2,27 @@ easy_admin:
     site_name: 'Symfony 4 Demo'
     design:
         menu: 
+            - { label: 'Public Homepage', route: 'core.index' }
             - { entity: 'Post', label: 'admin.posts.title', icon: 'tag' }
+            - label: 'Archery'
+              children:
+              - { entity: 'User', label: 'Utilisateur', icon: 'user' }
+              - { entity: 'Club', label: 'Club', icon: 'tag' }
+              - { entity: 'Affiliate', label: 'Affiliation', icon: 'tag' }
     entities:
         # List the entity class name you want to manage
         Post:
             label: admin.posts.title
             class: App\Entity\Post
+        User:
+            label: 'Utilisateur'
+            class: App\Entity\User
+            list:
+                fields: ['id', 'Username','fullname', 'isActive', 'isExpired', 'isLocked', 'isArcher']
+        Club:
+            label: 'Club'
+            class: App\Entity\Club
+        Affiliate:
+            label: 'Affiliation'
+            class: App\Entity\Affiliate
+        
