--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -10,5 +10,7 @@ framework:
 
     #esi: ~
     #fragments: ~
+    assets:
+      json_manifest_path: '%kernel.project_dir%/public/build/manifest.json'
     php_errors:
         log: true
